--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=senha
 MYSQL_DB_NAME=admin_node
+
+# docker container
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_DB_NAME=pizzaria
+
+
