--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: unless-stopped
     volumes:
     - .:/home/node/app
     - /home/node/app/node_modules
@@ -19,7 +20,7 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DB_NAME}
-    volumes:
-      - ./.docker/mysql:/var/lib/mysql
+    #volumes:
+      #- ./.docker/mysql:/var/lib/mysql
     ports:
       - 3306:3306
