--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@adonisjs/repl": "^3.1.11",
     "luxon": "^2.4.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
